[project]
name = "sirabus"
version = "0.0.0"
description = "Service Bus application pattern for Python using AMQP, SQS or Redis."
readme = "README.md"
authors = [
    { name = "Jacob Reimers", email = "pypi@reimers.io" }
]
requires-python = ">=3.13"
dependencies = [
    "aett>=3.3.1",
]
packages = [
    { include = "sirabus" }
]

[project.optional-dependencies]
amqp = [
    "aio-pika>=9.5"
]
redis = [
    "redis>=6.4"
]
sqs = [
    "boto3>=1.40.21"
]
cloudevents = [
    "cloudevents>=1.12.0",
]
pubsub = [
    "google-cloud-pubsub>=2.31.1",
]

[dependency-groups]
dev = [
    "behave>=1.3.2",
    "mypy>=1.17",
    "ruff>=0.12.11",
    "testcontainers[redis,google]>=4.12",
    "pika>=1.3",
    "boto3-stubs>=1.40.21",
]

[tool.behave]
capture = false
junit = false
logging_level = "FATAL"
outfiles = ["test_report.txt"]
paths = ["tests/features"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
